Add python3 version

--- a/_urlconfig.yml
+++ b/_urlconfig.yml
@@ -1,4 +1,4 @@
-﻿# URL: Your Hexo Blog URL
+# URL: Your Hexo Blog URL
 # Theme: Next|Yelee|Jacman|Apollo
 # API: Get it from：http://ziyuan.baidu.com/linksubmit/index
 # Example:
